--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -923,13 +923,13 @@
         </div>
 
         <div class="cursors">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div><span></span></div>
+            <div><span></span></div>
+            <div><span></span></div>
+            <div><span></span></div>
+            <div><span></span></div>
+            <div><span></span></div>
+            <div><span></span></div>
         </div>
         <script src="{{ url_for('static',filename='js/cursor.js') }}"></script>
         <footer>
