changed calcom url

--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -382,7 +382,7 @@
                                     Links:
                                 </h3>
                                 <div class="links">
-                                    <a href="https://www.pycalc.com/website/" target="_blank"><i class="fa-solid fa-globe fa-2x socialsIcon"></i></a>
+                                    <a href="https://pycalc-x.github.io/Calcom-Web/" target="_blank"><i class="fa-solid fa-globe fa-2x socialsIcon"></i></a>
                                     <a href="https://www.youtube.com/channel/UCDp9F9yQ5YUx5-WegWRoOAA" target="_blank"><i class="fa-brands fa-youtube fa-2x socialsIcon"></i></a>
                                 </div>
                             </div>
