removed duplicate code red

--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -620,52 +620,13 @@
                             </div>
                         </div>                  
                     </div>
-                    <div class="ProjectItem" id="CodeRedRoboticsVisionDocs" onclick="openThePopup('CodeRedRoboticsVisionDocs')">
-                        <img src="https://i.ytimg.com/vi/TQ1GWP2IlH4/mqdefault.jpg" alt="CODE RED">
-                        <h3>
-                            Rapid React Robot Vision
-                        </h3>
-                        <p>
-                            "the documentation for FRC 2022 visions"
-                        </p>
-                        <div class="popupData">
-                            <div class="popupBanner">
-                                <img src="https://i.ytimg.com/vi/TQ1GWP2IlH4/mqdefault.jpg" alt="CODE RED" class="popupBanner">
-                            </div>
-                            <div class="popupHead">
-                                <h3>
-                                    Rapid React Robot Vision
-                                </h3>
-                                <div class="xContainer">
-                                    <i class="fa-solid fa-x X" onclick="closeThePopup()"></i>
-                                </div>
-                            </div>
-                            <div class="popupContent">
-                                <p>
-                                    Rapid React, the FRC 2022 game was very similar to basketball. Code Red Robotics (My Highschools Robotics Team), wanted a visions pipeline that would accurately track the circular target and relay its distance and angle data at a high rate.
-                                    We delivered. I worked with one other student and a mentor to create not only a target tracking pipeline, but also a ball tracking one. This was the first year that the visions sytsem worked on the robot. The target tracking pipeline was deployed on a limelight, while the 
-                                    ball tracking one was developed on a jevois camera. Both used OpenCV, involved lots of trig, and yielded results that required (mostly) linear corrections. Overall, It was a solid pipeline that helped the team perform amazing at the competition.
-                                </p>
-                            </div>
-                            <div class="popupFooter">
-                                <h3>
-                                    Links:
-                                </h3>
-                                <div class="links">
-                                    <a href="https://github.com/CRRobotics/2022Visions" target="_blank"><i class="fa-brands fa-github fa-2x socialsIcon"></i></a>
-                                    <a href="https://www.youtube.com/watch?v=TQ1GWP2IlH4g" target="_blank"><i class="fa-brands fa-youtube fa-2x socialsIcon"></i></a>
-                                    <a href="https://docs.google.com/document/d/1WYECR4K3D5pkXqElIejt85lPNybWfgzisJbbccgZQFE/export?/format=pdf" target="_blank"><i class="fa-solid fa-scroll fa-2x socialsIcon"></i></a>
-                                </div>
-                            </div>
-                        </div>        
-                    </div>
                     <div class="ProjectItem" id="PresidentResearchProject" onclick="openThePopup('PresidentResearchProject')">
                         <img src="https://cdn.cnn.com/cnnnext/dam/assets/181105112842-donkey-elephant-top-full-169.jpg" alt="Politician Scraping">
                         <h3>
                             Politician Scraping
                         </h3>
                         <p>
-                            "Analysis of US Politician Data."
+                            "Analysis of webscraped US Politician Data."
                         </p>
                         <div class="popupData">
                             <div class="popupBanner">
