--- a/flaskApp/templates/exercise.html
+++ b/flaskApp/templates/exercise.html
@@ -102,7 +102,8 @@
             </div>
             <div class="exerciseBox">
                 <p>
-                    Rows 4x25 each side <br>
+                    Rows 4x25 <br>
+                    Rear delt flye 4x12 <br>
                 </p>
             </div>
         </div>
@@ -112,11 +113,12 @@
                     Weighted Pogo jumps 50x <br>
                     Punches 50x each side <br>
                     crunches 100x <br>
+                    push ups 100x (only when not hitting chest) <br>
                     pull up 6x8 <br>
                 </p>
             </div>
             <div class="dayText">
-                <h1>DO every day</h1>
+                <h1>Do every day</h1>
             </div>
         </div>
     </div>
