--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -90,6 +90,7 @@
                                 Rust, <br>
                                 Java,<br>  
                                 HTML/CSS/JS,<br>  
+                                Heroku,<br> 
                                 SQL,<br>  
                                 Tensorflow <br>
                                 Unreal Engine,<br>  
