--- a/flaskApp/templates/exercise.html
+++ b/flaskApp/templates/exercise.html
@@ -9,6 +9,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/tableStyle.css') }}">
+        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/sideBarStyles.css') }}">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.1/css/all.css. ">
         <link rel="icon" href="https://cdn.discordapp.com/avatars/643764774362021899/8ec6aecedaaffd552ab154d9c308b32f.webp?size=1024">
         <script src="https://kit.fontawesome.com/1b4a129057.js" crossorigin="anonymous"></script>
@@ -17,15 +18,20 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
-
+        <script src="{{ url_for('static',filename='js/sideBarHandler.js') }}"></script>
     </head>
     <body>
-        <nav class="NavBar">
+        <div class="NavBar">
+            <button id="hamburger" onclick="openNav()">☰</button>
+        </div>
+        <div id="mySidebar" class="sidebar">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
             <a href="/" class="btn">Home<span>()</span></a>
-            <a href="/#AboutMe" class="btn"><span>me.</span>About<span>()</span></a>
-            <a href="/#ContactMe" class="btn"><span>me.</span>Contact<span>()</span></a>
-            <a href="/#Work" class="btn"><span>me.</span>Work<span>()</span></a>
-        </nav>
+            <a href="#AboutMe" class="btn"><span>me.</span>About<span>()</span></a>
+            <a href="#ContactMe" class="btn"><span>me.</span>Contact<span>()</span></a>
+            <a href="#Work" class="btn"><span>me.</span>Work<span>()</span></a>
+        </div>
+
 
 
         <div  class="backButtonContainer">
@@ -122,7 +128,7 @@
             </div>
         </div>
     </div>
-    <div class="cursors">
+    {# <div class="cursors">
         <div><span></span></div>
         <div><span></span></div>
         <div><span></span></div>
@@ -130,7 +136,7 @@
         <div><span></span></div>
         <div><span></span></div>
         <div><span></span></div>
-    </div>
+    </div> #}
     <script src="{{ url_for('static',filename='js/cursor.js') }}"></script>
 
     </body>
