--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -17,7 +17,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/debug.addIndicators.min.js" integrity="sha512-RvUydNGlqYJapy0t4AH8hDv/It+zKsv4wOQGb+iOnEfa6NnF2fzjXgRy+FDjSpMfC3sjokNUzsfYZaZ8QAwIxg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="{{ url_for('static',filename='js/popupHandler.js') }}"></script>
-        <script src="{{ url_for('static',filename='js/sideBarHandler.js') }}"></script>
+        <script src="{{ url_for('static',filename='js/sidebarHandler.js') }}"></script>
     </head>
     <body>
         <div class="NavBar">
