--- a/flaskApp/templates/socials.html
+++ b/flaskApp/templates/socials.html
@@ -18,7 +18,7 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
-        <script src="{{ url_for('static',filename='js/sideBarHandler.js') }}"></script>
+        <script src="{{ url_for('static',filename='js/sidebarHandler.js') }}"></script>
     </head>
     <body>
         <div class="NavBar">
