--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -58,7 +58,7 @@
                         <h1>
                             me.<span class="function">About</span>()
                         </h1>
-                        <p>"""Since the February of 2021, I have trekked this world of computer science, mainly working on computer vision, web applications, discord bots, machine learning, and game addons.
+                        <p>"""I have wandered this world of computer science since the February of 2021, mainly working on computer vision, web applications, discord bots, machine learning, and game addons.
                             On this journey, I have worked on several projects and have had valuable experience collaborating with fellow developers."""
                         </p> 
                         <a href="https://github.com/SentientPlatypus" target="_blank"><i class="fa-brands fa-github fa-2x socialsIcon"></i></a>
