--- a/flaskApp/templates/gaming.html
+++ b/flaskApp/templates/gaming.html
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div class="PleasureItem">
-                    <img src="https://i.pinimg.com/originals/5c/dc/78/5cdc78e136c71999148940fd9952724f.jpg" alt="Valorant">
+                    <img src="https://rare-gallery.com/mocahbig/1411499-omen-valorant-valorant-games-hd-4k-2020-games.jpg" alt="Valorant">
 
                     <div class="caption">
                         <p>
