--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -58,7 +58,7 @@
                         <h1>
                             me.<span class="function">About</span>()
                         </h1>
-                        <p>"""I have wandered this world of computer science since the February of 2021, mainly working on computer vision, web applications, discord bots, machine learning, and game addons.
+                        <p>"""I started my CS journey during the February of 2021, mainly working on computer vision, web applications, discord bots, machine learning, and game addons.
                             On this journey, I have worked on several projects and have had valuable experience collaborating with fellow developers."""
                         </p> 
                         <a href="https://github.com/SentientPlatypus" target="_blank"><i class="fa-brands fa-github fa-2x socialsIcon"></i></a>
@@ -74,11 +74,11 @@
                             <p>
                                 Frontend,<br>  
                                 Backend,<br>  
-                                Datascience,<br>  
                                 Computer Visions,<br> 
-                                CAD,<br>
                                 Machine Learning, <br>
                                 webscraping, <br>
+                                CAD,<br>
+                                Data analysis,<br>  
                                 Discord Bots,<br>  
                                 Databases,<br>  
                                 MC Plugins,<br>  
@@ -98,7 +98,8 @@
                                 HTML/CSS/JS,<br>  
                                 Heroku,<br> 
                                 SQL,<br>  
-                                Tensorflow <br>
+                                Tensorflow,<br>
+                                nextcord,<br>   
                                 Unreal Engine,<br>  
                                 Blender,      <br> 
                                 jupyter notebooks, <br>
@@ -114,8 +115,7 @@
                                 Limelight, <br>  
                                 Jevois,<br>  
                                 Spigot,<br>  
-                                Davinci Resolve,<br> 
-                                nextcord,<br>                 
+                                Davinci Resolve,<br>               
                             </p>
 
                         </div>
