fixed links in subpages

--- a/flaskApp/templates/exercise.html
+++ b/flaskApp/templates/exercise.html
@@ -27,9 +27,9 @@
         <div id="mySidebar" class="sidebar">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
             <a href="/" class="btn">Home<span>()</span></a>
-            <a href="#AboutMe" class="btn"><span>me.</span>About<span>()</span></a>
-            <a href="#ContactMe" class="btn"><span>me.</span>Contact<span>()</span></a>
-            <a href="#Work" class="btn"><span>me.</span>Work<span>()</span></a>
+            <a href="/#AboutMe" class="btn"><span>me.</span>About<span>()</span></a>
+            <a href="/#ContactMe" class="btn"><span>me.</span>Contact<span>()</span></a>
+            <a href="/#Work" class="btn"><span>me.</span>Work<span>()</span></a>
         </div>
 
 
