--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -241,6 +241,7 @@
                                     Links:
                                 </h3>
                                 <div class="links">
+                                    <a href="https://github.com/SentientPlatypus/Foresight" target="_blank"><i class="fa-brands fa-github fa-2x socialsIcon"></i></a>
                                     <a href="https://foresight.sentientplatypu.repl.co" target="_blank"><i class="fa-solid fa-globe fa-2x socialsIcon"></i></a>
                                 </div>
                             </div>
