--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -83,7 +83,6 @@
                                 Databases,<br>  
                                 MC Plugins,<br>  
                                 Video Editing,<br>  
-                                Game Development,<br>  
                                 3D modeling<br>  
                             </p>
                         </div>
@@ -100,8 +99,6 @@
                                 SQL,<br>  
                                 Tensorflow,<br>
                                 nextcord,<br>   
-                                Unreal Engine,<br>  
-                                Blender,      <br> 
                                 jupyter notebooks, <br>
                                 Autodesk Fusion 360 <br>
                                 MongoDB,<br>  
@@ -115,6 +112,8 @@
                                 Limelight, <br>  
                                 Jevois,<br>  
                                 Spigot,<br>  
+                                Unreal Engine,<br>  
+                                Blender,      <br> 
                                 Davinci Resolve,<br>               
                             </p>
 
@@ -129,15 +128,14 @@
                                 <a href="https://resonancewebsite.herokuapp.com/" target="_blank">@Resonance</a><br>
                                 2022 - now <br><br>  
 
+                                <span>Computer visions head</span> <br>
+                                <a href="https://team639.org" target="_blank">@Code Red</a><br>
+                                2021 - now <br><br> 
+
                                 <span>Webapp developer + Cofounder</span> <br>
                                 <a href="https://www.pycalc.com/website/" target="_blank">@Pycalc X</a><br>
                                 2021 - now <br><br>  
-
-                                <span>Computer visions engineer</span> <br>
-                                <a href="https://team639.org" target="_blank">@Code Red</a><br>
-                                2021 - now <br><br> 
    
-
                                 <span>Datascience project + Contributor</span> <br>
                                 <a href="https://codebozu.com" target="_blank">@CodeBozu</a><br>
                                 2021 <br><br>
@@ -160,7 +158,7 @@
                                 2006 - now<br><br>    
 
                                 <span>Latin</span> <br>
-                                2020 - now <br><br>      
+                                2020 - 2022 <br><br>      
                             </p>
                         </div>
 
