--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -128,6 +128,10 @@
                                 <a href="https://resonancewebsite.herokuapp.com/" target="_blank">@Resonance</a><br>
                                 2022 - now <br><br>  
 
+                                <span>President</span> <br>
+                                <a href="https://sites.google.com/view/ithacastemadvocates/associates#h.p6aqjxpg6ygg" target="_blank">@IHS Dev team</a><br>
+                                2022 - now <br><br> 
+                                
                                 <span>Computer visions head</span> <br>
                                 <a href="https://team639.org" target="_blank">@Code Red</a><br>
                                 2021 - now <br><br> 
