changed profile picture cause im not a little b

--- a/flaskApp/templates/gaming.html
+++ b/flaskApp/templates/gaming.html
@@ -11,7 +11,7 @@
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/GalleryStyle.css') }}">
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/sideBarStyles.css') }}">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.1/css/all.css. ">
-        <link rel="icon" href="https://cdn.discordapp.com/avatars/643764774362021899/8ec6aecedaaffd552ab154d9c308b32f.webp?size=1024">
+        <link rel="icon" href="{{ url_for('static',filename='images/portrait.png') }}">
         <script src="https://kit.fontawesome.com/1b4a129057.js" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <!--<script language="JavaScript" src="{{ url_for('static',filename='./js/custom.js') }}"></script>-->
