edited nnsim desc

--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -308,8 +308,8 @@
                             </div>
                             <div class="popupContent">
                                 <p>
-                                    A project made entirely on vanilla javascript HTML and CSS. Implements layer like neural network architecture 
-                                    which determines the Cars movements. The Car movements made a great application of the unit circle.
+                                    A project made entirely on vanilla javascript HTML and CSS. Implements a basic feed forwards neural network
+                                    which determines the Cars movements. The simulation relies on random variability in the parameters instead of stochastic gradient descent. In other words, it omits the calculus. The Car movements made a great application of the unit circle.
                                 </p>
                             </div>
                             <div class="popupFooter">
