--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -357,7 +357,7 @@
                                 <div class="links">
                                     <a href="https://github.com/CRRobotics/2022Visions" target="_blank"><i class="fa-brands fa-github fa-2x socialsIcon"></i></a>
                                     <a href="https://www.youtube.com/watch?v=TQ1GWP2IlH4g" target="_blank"><i class="fa-brands fa-youtube fa-2x socialsIcon"></i></a>
-                                    <a href="https://docs.google.com/document/d/1WYECR4K3D5pkXqElIejt85lPNybWfgzisJbbccgZQFE/export?/format=pdf" target="_blank"><i class="fa-solid fa-scroll fa-2x socialsIcon"></i></a>
+                                    <a href="https://docs.google.com/document/d/1_yqAvAPJ5UYAn3vQuKAiG6M5FvJACrHMLZhiMXVHW5s/edit?usp=sharing" target="_blank"><i class="fa-solid fa-scroll fa-2x socialsIcon"></i></a>
                                 </div>
                             </div>
                         </div>
