fixed file name

--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -205,7 +205,7 @@
                 </div>
                 <div class="Projects">
                     <div class="ProjectItem" id="tauv" onclick="openThePopup('tauv')" data-hover="Click for More Information!">
-                        <img src="{{ url_for('static',filename='styles/tauV.png') }}" alt="Foresight">
+                        <img src="{{ url_for('static',filename='images/tauV.png') }}" alt="Foresight">
                         <h3 class="title">
                             Tau / 2 r squared
                         </h3>
@@ -214,7 +214,7 @@
                         </p>
                         <div class="popupData">
                             <div class="popupBanner">
-                                <img src="{{ url_for('static',filename='styles/tauV.png') }}" alt="Foresight " class="popupBanner">
+                                <img src="{{ url_for('static',filename='images/tauV.png') }}" alt="Foresight " class="popupBanner">
                             </div>
                             <div class="popupHead">
                                 <h3>
