--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -96,14 +96,15 @@
                                 Java,<br>  
                                 HTML/CSS/JS,<br>  
                                 Heroku,<br> 
-                                SQL,<br>  
                                 Tensorflow,<br>
                                 nextcord,<br>   
-                                jupyter notebooks, <br>
-                                Autodesk Fusion 360 <br>
                                 MongoDB,<br>  
                                 Latex, <br>
                                 Flask, <br>
+                                Manim, <br>
+                                jupyter notebooks, <br>
+                                Autodesk Fusion 360 <br>
+                                SQL,<br>  
                                 Rocket, <br>
                                 GPT-3,<br>  
                                 OpenCV,<br>  
