added image lol

--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -206,7 +206,7 @@
                 </div>
                 <div class="Projects">
                     <div class="ProjectItem" id="codejam" onclick="openThePopup('codejam')" data-hover="Click for More Information!">
-                        <img src="{{ url_for('static',filename='images/codeJam.png') }}" alt="Foresight">
+                        <img src="{{ url_for('static',filename='images/codejam.png') }}" alt="Foresight">
                         <h3 class="title">
                             Holiday Code Jam 2022
                         </h3>
@@ -215,7 +215,7 @@
                         </p>
                         <div class="popupData">
                             <div class="popupBanner">
-                                <img src="{{ url_for('static',filename='images/codeJam.png') }}" alt="Foresight " class="popupBanner">
+                                <img src="{{ url_for('static',filename='images/codejam.png') }}" alt="Foresight " class="popupBanner">
                             </div>
                             <div class="popupHead">
                                 <h3>
