--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -279,7 +279,7 @@
                         </div>
                     </div>
                     <div class="ProjectItem" id="digitrec" onclick="openThePopup('digitrec')" data-hover="Click for More Information!">
-                        <img src="https://miro.medium.com/max/372/1*AO2rIhzRYzFVQlFLx9DM9A.png" alt="Foresight">
+                        <img src="https://machinelearningmastery.com/wp-content/uploads/2019/02/Plot-of-a-Subset-of-Images-from-the-MNIST-Dataset.png" alt="Foresight">
                         <h3 class="title">
                             Handwritten Digit Recognition
                         </h3>
@@ -288,7 +288,7 @@
                         </p>
                         <div class="popupData">
                             <div class="popupBanner">
-                                <img src="https://miro.medium.com/max/372/1*AO2rIhzRYzFVQlFLx9DM9A.png" alt="Foresight " class="popupBanner">
+                                <img src="https://machinelearningmastery.com/wp-content/uploads/2019/02/Plot-of-a-Subset-of-Images-from-the-MNIST-Dataset.png" alt="Foresight " class="popupBanner">
                             </div>
                             <div class="popupHead">
                                 <h3>
